[gd_scene load_steps=15 format=3 uid="uid://c4s5a2xw2aimj"]

[ext_resource type="StyleBox" uid="uid://d3hgcb4ery8wq" path="res://assets/textures/UI-elements/styleBoxes/scroll.tres" id="1_k40yg"]
[ext_resource type="Theme" uid="uid://8qfvurhug2dj" path="res://assets/textures/UI-themes/menu.tres" id="1_xnlxa"]
[ext_resource type="Texture2D" uid="uid://dv455rrgqjrob" path="res://assets/textures/UI-elements/soundMaster.png" id="2_n8ttk"]
[ext_resource type="Script" path="res://scripts/volume.gd" id="3_kniqo"]
[ext_resource type="Texture2D" uid="uid://da6emudpok21d" path="res://assets/textures/UI-elements/soundMasterMute.png" id="3_xex8p"]
[ext_resource type="Texture2D" uid="uid://cpv238u7wegn3" path="res://assets/textures/UI-elements/soundSFX.png" id="4_bnbyg"]
[ext_resource type="Texture2D" uid="uid://cc3nx2pfosk0x" path="res://assets/textures/UI-elements/soundSFXMute.png" id="5_gdpv8"]
[ext_resource type="Script" path="res://scripts/tooltipper.gd" id="6_0iyjv"]
[ext_resource type="Texture2D" uid="uid://c8lx73q6nam50" path="res://assets/textures/UI-elements/soundMusic.png" id="6_i5odw"]
[ext_resource type="Texture2D" uid="uid://behw2ru4uuxpb" path="res://assets/textures/UI-elements/soundMusicMute.png" id="7_d8qrc"]
[ext_resource type="AudioStream" uid="uid://xjrg70j58rt4" path="res://assets/audio/sfx/Mechanical Screws .mp3" id="10_5lipe"]

[sub_resource type="Animation" id="Animation_it1d2"]
resource_name = "fadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sfxScrew:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfxScrew:pitch_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.3, 1.0]
}

[sub_resource type="Animation" id="Animation_wduvn"]
resource_name = "fadeOut"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sfxScrew:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -12.0, -6.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sfxScrew:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sfxScrew:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.23, 0.26),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 1.1, 0.8, 1.0, 0.1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wtvwa"]
_data = {
"fadeIn": SubResource("Animation_it1d2"),
"fadeOut": SubResource("Animation_wduvn")
}

[node name="volume" type="PanelContainer"]
custom_minimum_size = Vector2(0, 400)
mouse_filter = 1
theme = ExtResource("1_xnlxa")
theme_override_styles/panel = ExtResource("1_k40yg")
script = ExtResource("3_kniqo")

[node name="volume" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="audioMaster" type="VBoxContainer" parent="volume"]
layout_mode = 2

[node name="masterSpace" type="Container" parent="volume/audioMaster"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="volume" type="VSlider" parent="volume/audioMaster" groups=["buttonHover"]]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
mouse_filter = 1
max_value = 1.2
step = 0.001
value = 1.0

[node name="masterSpace2" type="Container" parent="volume/audioMaster"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="mute" type="TextureButton" parent="volume/audioMaster" groups=["buttonClick"]]
layout_mode = 2
tooltip_text = "ttMaster"
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource("2_n8ttk")
texture_pressed = ExtResource("3_xex8p")
script = ExtResource("6_0iyjv")

[node name="masterSpace3" type="Container" parent="volume/audioMaster"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2

[node name="audioSFX" type="VBoxContainer" parent="volume"]
layout_mode = 2

[node name="sfxSpace" type="Container" parent="volume/audioSFX"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="volume" type="VSlider" parent="volume/audioSFX" groups=["buttonHover"]]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
mouse_filter = 1
max_value = 1.2
step = 0.001
value = 1.0

[node name="sfxSpace2" type="Container" parent="volume/audioSFX"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="mute" type="TextureButton" parent="volume/audioSFX" groups=["buttonClick"]]
layout_mode = 2
tooltip_text = "ttSFX"
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource("4_bnbyg")
texture_pressed = ExtResource("5_gdpv8")
script = ExtResource("6_0iyjv")

[node name="sfxSpace3" type="Container" parent="volume/audioSFX"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2

[node name="audioMusic" type="VBoxContainer" parent="volume"]
layout_mode = 2

[node name="musicSpace" type="Container" parent="volume/audioMusic"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="volume" type="VSlider" parent="volume/audioMusic" groups=["buttonHover"]]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
mouse_filter = 1
max_value = 1.2
step = 0.001
value = 1.0

[node name="musicSpace2" type="Container" parent="volume/audioMusic"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="mute" type="TextureButton" parent="volume/audioMusic" groups=["buttonClick"]]
layout_mode = 2
tooltip_text = "ttMusic"
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource("6_i5odw")
texture_pressed = ExtResource("7_d8qrc")
script = ExtResource("6_0iyjv")

[node name="musicSpace3" type="Container" parent="volume/audioMusic"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2

[node name="sfxScrew" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_5lipe")
mix_target = 1
bus = &"sfx"

[node name="fader" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wtvwa")
}

[connection signal="value_changed" from="volume/audioMaster/volume" to="." method="_on_master_value_changed"]
[connection signal="toggled" from="volume/audioMaster/mute" to="." method="_on_masterMute_toggled"]
[connection signal="value_changed" from="volume/audioSFX/volume" to="." method="_on_sfx_value_changed"]
[connection signal="toggled" from="volume/audioSFX/mute" to="." method="_on_sfxMute_toggled"]
[connection signal="value_changed" from="volume/audioMusic/volume" to="." method="_on_music_value_changed"]
[connection signal="toggled" from="volume/audioMusic/mute" to="." method="_on_musicMute_toggled"]
